--- a/Jalki_scrape.ipynb
+++ b/Jalki_scrape.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Web scraper for automatically downloading route attributes and GPX-files form www.jalki.fi\n",
+    "\n",
+    "This data was not used in the final thesis\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -20,61 +29,66 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# Read the CSV file with route IDs\n",
+    "#read csv with all route ids (received from jalki.fi)\n",
     "df = pd.read_csv(\"lapin_reitit.csv\")\n",
     "\n",
-    "# Create an empty dictionary to store extracted data\n",
+    "#empty dictionary to store data\n",
     "extracted_data_dict = {}\n",
     "\n",
     "\n",
-    "# Create an empty DataFrame to store extracted data\n",
+    "#empty df to store data\n",
     "extracted_data = pd.DataFrame(columns=['Tyyppi', 'Pituus', 'Nousua', 'Lisätty'])\n",
     "\n",
     "\n",
     "\n",
-    "# Iterate through each route ID\n",
+    "# Iterate through each route id\n",
     "for route_id in df['ID']:\n",
-    "    # Construct the URL\n",
+    "    #construct url\n",
     "    url = f\"https://jalki.fi/routes/{route_id}\"\n",
     "    \n",
-    "    # Send a GET request to the URL\n",
+    "    #send request\n",
     "    response = requests.get(url)\n",
     "    \n",
-    "    # Check if the request was successful\n",
+    "    #see if request was successfull\n",
     "    if response.status_code == 200:\n",
-    "        # Parse the HTML content of the page\n",
+    "        #parse html\n",
     "        soup = BeautifulSoup(response.content, 'html.parser')\n",
     "        \n",
-    "        # Find the section with class \"info content\"\n",
+    "        #find info section\n",
     "        info_section = soup.find('section', class_='info content')\n",
     "        \n",
-    "        # Find all dt elements within the info section\n",
+    "        #find all dt elements within info section\n",
     "        dt_elements = info_section.find_all('dt')\n",
     "        \n",
-    "        # Find all dd elements within the info section\n",
+    "        # find all dd elements within info section\n",
     "        dd_elements = info_section.find_all('dd')\n",
     "        \n",
-    "        # Initialize a dictionary to store extracted data for this route\n",
+    "        #store extracted data to dictionary\n",
     "        route_data = {}\n",
     "        \n",
-    "        # Iterate through each dt element and check its text to extract the desired information\n",
+    "        #get text information from dt and dd elements\n",
     "        for dt, dd in zip(dt_elements, dd_elements):\n",
     "            route_data[dt.text.strip()] = dd.text.strip()\n",
     "        \n",
-    "            # Add the extracted data to the dictionary with route_id as the key\n",
+    "            # add the extracted data to the dictionary with route_id as the key\n",
     "        extracted_data_dict[route_id] = route_data\n",
     "    else:\n",
     "        print(f\"Failed to retrieve data for route with ID {route_id}\")\n",
     "\n",
-    "# Convert the dictionary to a DataFrame\n",
+    "# convert the dictionary to a df\n",
     "extracted_data_df = pd.DataFrame.from_dict(extracted_data_dict, orient='index')\n",
     "\n",
-    "# Write the extracted data to a CSV file\n",
+    "#write to csv\n",
     "extracted_data_df.to_csv(\"extracted_data.csv\")\n",
     "\n",
     "print(\"Extraction complete. Data saved to extracted_data.csv\")\n",
     "print(\"Extraction complete. Data saved to extracted_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -488,9 +502,9 @@
     "from shapely.geometry import LineString\n",
     "from io import BytesIO\n",
     "\n",
-    "# Function to download GPX file from a URL\n",
+    "#function to download gpx file from url\n",
     "def download_gpx(route_id):\n",
-    "    url = f\"https://jalki.fi/routes/{route_id}.gpx\"  # URL format for downloading GPX files\n",
+    "    url = f\"https://jalki.fi/routes/{route_id}.gpx\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
     "        return response.content\n",
@@ -498,28 +512,28 @@
     "        print(f\"Failed to download GPX for route {route_id}\")\n",
     "        return None\n",
     "\n",
-    "# Iterate over the IDs and download GPX routes\n",
+    "# \n",
     "for route_id in merged_routes.index:\n",
     "    gpx_data = download_gpx(route_id)\n",
     "    if gpx_data:\n",
-    "        # Parse GPX data\n",
+    "        #parse gpx data\n",
     "        gpx = gpxpy.parse(BytesIO(gpx_data))\n",
-    "        # Extract track points\n",
+    "        #empty list for track points\n",
     "        track_points = []\n",
+    "        #iterate over tracks\n",
     "        for track in gpx.tracks:\n",
     "            for segment in track.segments:\n",
     "                for point in segment.points:\n",
     "                    track_points.append((point.longitude, point.latitude))\n",
-    "        # Convert track points to LineString geometry\n",
+    "        #convert to linestring\n",
     "        linestring = LineString(track_points)\n",
-    "        # Set the LineString geometry to the merged_data DataFrame\n",
+    "        #set linestring to gdf\n",
     "        merged_routes.at[route_id, 'geometry'] = linestring\n",
     "\n",
     "        print(f'Processing route {route_id}')\n",
     "\n",
-    "# Save the merged DataFrame with geometry to a GeoJSON file\n",
+    "# Save the merged gdf\n",
     "merged_gdf = gpd.GeoDataFrame(merged_routes, geometry='geometry')\n",
-    "# merged_gdf.to_file(\"merged_data.geojson\", driver='GeoJSON')\n",
     "\n",
     "print(\"GPX routes downloaded and added to merged_data. Saved to merged_data.geojson\")\n",
     "\n"
