--- a/Strava_edit.ipynb
+++ b/Strava_edit.ipynb
@@ -91,9 +91,6 @@
     }
    ],
    "source": [
-    "fp_2021 = \"939df798a64b6e7cbbbed7408820afb26b927ef27e6f225a7441c4ed1368645e-1707121028867.csv\"\n",
-    "fp_2022 = \n",
-    "fp_2023 =\n",
     "\n",
     "data = pd.read_csv(fp_2021,sep=\",\")\n",
     "\n",
@@ -692,17 +689,14 @@
     }
    ],
    "source": [
-    "# Group the data by 'edge_uid' and 'month', and sum the 'total_trip_count'\n",
+    "# Group the data \n",
     "grouped_data = data.groupby(['edge_uid', 'month'])['total_trip_count'].sum().reset_index()\n",
     "\n",
     "# Pivot the data\n",
     "pivot_data = grouped_data.pivot_table(index='edge_uid', columns='month', values='total_trip_count', fill_value=0)\n",
     "\n",
-    "# If you want to reset the index and have 'edge_uid' as a column instead\n",
+    "# pivot\n",
     "pivot_data.reset_index(inplace=True)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -775,8 +769,6 @@
     }
    ],
    "source": [
-    "# Convert pivot_data to a GeoDataFrame with 'edge_uid' as the index\n",
-    "#pivot_data_gdf = gpd.GeoDataFrame(pivot_data)\n",
     "\n",
     "# Join pivot_data_gdf to data_geom using the common column 'edge_uid'\n",
     "joined_gdf = geo_data.merge(pivot_data, on='edge_uid')\n",
