--- a/ridewgps_API.ipynb
+++ b/ridewgps_API.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Function to download trip id's\n"
+    "Function to download trip id:s from Ride with GPS data API\n"
    ]
   },
   {
@@ -27,8 +27,6 @@
     "import requests\n",
     "import time\n",
     "\n",
-    "\n",
-    "\n",
     "def fetch_all_trip_ids(response):\n",
     "    trip_ids = set()\n",
     "    for route in response['results']:\n",
@@ -36,15 +34,18 @@
     "            trip_ids.add(route['trip']['id'])\n",
     "    return trip_ids\n",
     "\n",
+    "#define start location for the query and distance (20 km)\n",
     "def fetch_trip_ids(start_location=\"67.62033,24.26553\", start_distance=20):\n",
     "    url = \"https://ridewithgps.com/find/search.json\"\n",
     "    offset = 0\n",
+    "    #add request limit of 300\n",
     "    request_limit = 300\n",
     "    trip_ids = set()\n",
     "\n",
     "    stopper = 0\n",
     "    stopper2 = 0\n",
     "    while True:\n",
+    "        #add to stopper to change start location after two and four iterations\n",
     "        stopper2 += 1\n",
     "        data = {\n",
     "            \"search\": {\n",
@@ -59,9 +60,9 @@
     "                \"limit\": str(request_limit),\n",
     "                \"sort_by\": \"length asc\"\n",
     "            },\n",
-    "            \"apikey\": \"keymikko\",\n",
+    "            \"apikey\": \"********\",\n",
     "            \"version\": \"2\",\n",
-    "            \"auth_token\": \"a9ec8543d3d496cc9f03fe9352476fb0\"\n",
+    "            \"auth_token\": \"*****************\" #replace with toke received from Ride with GPS\n",
     "        }\n",
     "\n",
     "        response = requests.post(url, json=data)\n",
@@ -78,7 +79,6 @@
     "            print(f\"Received 400 status code. Retrying after 5 seconds...\")\n",
     "            time.sleep(5)\n",
     "            stopper += 1\n",
-    "            \n",
     "            if stopper == 3:\n",
     "                break\n",
     "            else:\n",
@@ -86,7 +86,7 @@
     "        else:\n",
     "            print(f\"Error fetching trip IDs. Status code: {response.status_code}\")\n",
     "            break\n",
-    "    if stopper2 == 2:\n",
+    "    #change query locations after two and four iterations\n",
     "        start_location = \"67.91606,24.21740\"\n",
     "    if stopper2 == 4:\n",
     "        start_location =\"68.14865,23.94110\"\n",
@@ -94,7 +94,7 @@
     "\n",
     "# Example usage\n",
     "all_trip_ids = fetch_trip_ids()\n",
-    "print(f\"Total unique trip IDs: {len(all_trip_ids)}\")"
+    "print(len(all_trip_ids))"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Function to download trip details"
+    "Function to download trip details"
    ]
   },
   {
@@ -347,6 +347,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
+    "#function to fetch trip id:s\n",
     "def fetch_trip_data(trip_id):\n",
     "    base_url = \"https://ridewithgps.com/trips/{}.json\"\n",
     "    url = base_url.format(trip_id)\n",
@@ -358,9 +359,9 @@
     "        print(f\"Error fetching trip data for trip ID {trip_id}: {response.status_code}\")\n",
     "        return None\n",
     "\n",
-    "# Sample list of trip IDs\n",
+    "# sample list of trip IDs\n",
     "trip_ids = all_trip_ids\n",
-    "# Fetch trip data for each trip ID\n",
+    "# fetch trip data for each trip ID\n",
     "trip_data_list = []\n",
     "for trip_id in trip_ids:\n",
     "    trip_data = fetch_trip_data(trip_id)\n",
@@ -369,11 +370,10 @@
     "    else:\n",
     "        print(f\"Failed to fetch data for trip ID {trip_id}\")\n",
     "\n",
-    "# Create GeoDataFrame with empty geometry column\n",
+    "# create GeoDataFrame with empty geometry column\n",
     "gdf = gpd.GeoDataFrame(trip_data_list)\n",
     "gdf['geometry'] = None\n",
     "\n",
-    "# Print GeoDataFrame\n",
     "gdf.head()\n"
    ]
   },
@@ -613,15 +613,20 @@
    "source": [
     "from shapely.geometry import Point, LineString\n",
     "\n",
-    "# Function to create LineString geometry from track points\n",
+    "#function to create linestring from track points\n",
     "def create_line_geometry(track_points):\n",
     "    if track_points:\n",
+    "        #empty list for coordinates\n",
     "        coordinates = []\n",
+    "        #iterate through track point coordinates\n",
     "        for track in track_points:\n",
+    "            #check of track point contains coordinates\n",
     "            if 'x' in track and 'y' in track:\n",
+    "                #create point from coordinates\n",
     "                route_point = Point(track['x'], track['y'])\n",
+    "                #add point to point list\n",
     "                coordinates.append(route_point)\n",
-    "        # Create LineString geometry\n",
+    "        #create linestring from list of points\n",
     "        if len(coordinates) >= 2:\n",
     "            line = LineString(coordinates)\n",
     "            return line\n",
@@ -630,13 +635,12 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "# Apply the function to create LineString geometry from track_points\n",
+    "#apply the function\n",
     "gdf['geometry'] = gdf['track_points'].apply(create_line_geometry)\n",
     "\n",
-    "# Drop rows with missing geometry\n",
+    "#drop rows with no geometry\n",
     "gdf = gdf.dropna(subset=['geometry'])\n",
     "\n",
-    "# Print the updated GeoDataFrame\n",
     "gdf.head()"
    ]
   },
@@ -646,6 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transform timestamp to datetime\n",
     "import datetime\n",
     "gdf['created_at'] = gdf['created_at'].apply(lambda x: datetime.datetime.fromtimestamp(x))"
    ]
@@ -893,6 +898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sort by date posted\n",
     "gdf_sorted = gdf.sort_values(by='created_at')"
    ]
   },
@@ -902,6 +908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#limit to >2021\n",
     "gdf_sorted_2021 = gdf_sorted.loc[gdf_sorted['created_at']>='2021']"
    ]
   },
@@ -931,6 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#assign crs\n",
     "gdf.crs = 'EPSG:4326'\n",
     "\n"
    ]
@@ -940,18 +948,7 @@
    "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rajattu = gdf[['id','distance','geometry']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rajattu.to_file('ridewgps_eka_testi_delete.gpkg')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
