--- a/ridewgps_edit.ipynb
+++ b/ridewgps_edit.ipynb
@@ -9,16 +9,13 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "\n",
-    "# Specify the path to your GeoPackage file\n",
     "file_path = 'ridewgps_kaikki_kesa.gpkg'\n",
     "\n",
-    "# Read the GeoPackage file into a GeoDataFrame\n",
     "gdf = gpd.read_file(file_path)\n",
     "\n",
-    "# Convert the datetime column to pandas datetime type if needed\n",
     "gdf['datetime'] = pd.to_datetime(gdf['created_at'])\n",
     "\n",
-    "# Filter rows based on date range (before 2021 and after 2023)\n",
+    "# Filter rows based on date range\n",
     "gdf_filtered = gdf[(gdf['datetime'] >= '2012-01-01') & (gdf['datetime'] <= '2023-12-31')]"
    ]
   },
@@ -408,23 +405,18 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming your dataframe is named 'df' and the year column is named 'year'\n",
-    "# Replace 'df' with your actual dataframe and 'year' with your column name\n",
-    "\n",
-    "# Group by year and count the records\n",
+    "# group by year and count records\n",
     "year_counts = gdf['year'].value_counts().sort_index()\n",
     "\n",
-    "# Plot the bar chart\n",
+    "#plot with bar chart\n",
     "plt.figure(figsize=(10,6))\n",
     "year_counts.plot(kind='bar', color='dodgerblue')\n",
     "\n",
-    "# Customize the chart\n",
-    "#plt.title('Ride with GPS records per year')\n",
+    "\n",
+    "#add labels\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Number of Records')\n",
-    "plt.xticks(rotation=45)\n",
-    "\n",
-    "# Show the plot"
+    "plt.xticks(rotation=45)\n"
    ]
   },
   {
@@ -2516,36 +2508,8 @@
     "    \n",
     "    # Perform operations on the dataframe for the current month/year\n",
     "    print(f\"Dataframe for {month_year_str}:\")\n",
-    "    print(df.head())  # Display the first few rows of the dataframe\n",
-    "    \n",
-    "    # Additional operations can be performed here based on your analysis requirements\n",
-    "    # For example, calculate summary statistics, plot graphs, etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a new dictionary to store dataframes for each month\n",
-    "monthly_dataframes = {}\n",
-    "\n",
-    "# Iterate over the keys in dfs_by_month_year dictionary\n",
-    "for period, df in dfs_by_month_year.items():\n",
-    "    # Extract the year and month from the period object\n",
-    "    year = period.year\n",
-    "    month = period.month\n",
-    "    \n",
-    "    # Create a key based on the month name (e.g., 'January 2021')\n",
-    "    month_name = f\"{pd.Timestamp(year=year, month=month, day=1):%B %Y}\"\n",
-    "    \n",
-    "    # Store the dataframe in the monthly_dataframes dictionary under the month name key\n",
-    "    monthly_dataframes[month_name] = df\n",
-    "\n",
-    "# Now monthly_dataframes contains separate dataframes for each month\n",
-    "# You can access a specific month's dataframe using its name (e.g., 'January 2021')\n",
-    "july_2021_df = monthly_dataframes['July 2023']\n"
+    "    print(df.head()) \n",
+    "    "
    ]
   },
   {
@@ -2638,116 +2602,6 @@
    ],
    "source": [
     "july_2021_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         id  distance          created_at  \\\n",
-      "0  71715093  19425.90 2021-07-22 10:13:59   \n",
-      "1  72050991  19425.90 2021-07-27 11:17:40   \n",
-      "2  96560130  22719.10 2022-07-15 15:15:48   \n",
-      "3  95655992  41139.00 2022-07-06 21:57:34   \n",
-      "4  97923707   6718.34 2022-07-28 16:59:09   \n",
-      "\n",
-      "                                            geometry            datetime  \\\n",
-      "0  LINESTRING (26.92317 67.15807, 26.92317 67.158... 2021-07-22 10:13:59   \n",
-      "1  LINESTRING (26.92317 67.15807, 26.92317 67.158... 2021-07-27 11:17:40   \n",
-      "2  LINESTRING (27.23771 67.02061, 27.23775 67.020... 2022-07-15 15:15:48   \n",
-      "3  LINESTRING (26.91105 67.15450, 26.91105 67.154... 2022-07-06 21:57:34   \n",
-      "4  LINESTRING (26.91038 67.15446, 26.91040 67.154... 2022-07-28 16:59:09   \n",
-      "\n",
-      "  month_year  \n",
-      "0    2021-07  \n",
-      "1    2021-07  \n",
-      "2    2022-07  \n",
-      "3    2022-07  \n",
-      "4    2022-07  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Create a new dictionary to store combined dataframes for each month\n",
-    "monthly_dataframes = {}\n",
-    "\n",
-    "# Iterate over the keys in dfs_by_month_year dictionary\n",
-    "for period, df in dfs_by_month_year.items():\n",
-    "    # Extract the month name (e.g., 'July')\n",
-    "    month_name = period.strftime('%B')\n",
-    "    \n",
-    "    # Check if the month_name key exists in the monthly_dataframes dictionary\n",
-    "    if month_name not in monthly_dataframes:\n",
-    "        # If the key doesn't exist, initialize an empty dataframe\n",
-    "        monthly_dataframes[month_name] = pd.DataFrame()\n",
-    "    \n",
-    "    # Concatenate the current dataframe (df) with the existing dataframe for the month\n",
-    "    monthly_dataframes[month_name] = pd.concat([monthly_dataframes[month_name], df], ignore_index=True)\n",
-    "\n",
-    "# Now monthly_dataframes contains combined dataframes for each month across all years\n",
-    "# You can access a specific month's combined dataframe using its name (e.g., 'July')\n",
-    "    \n",
-    "july_combined_df = monthly_dataframes['July']\n",
-    "june_combined_df = monthly_dataframes['June']\n",
-    "august_combined_df = monthly_dataframes['August']\n",
-    "september_combined_df = monthly_dataframes['September']\n",
-    "october_combined_df = monthly_dataframes['October']\n",
-    "\n",
-    "# Perform operations on the combined dataframe for July (across all years)\n",
-    "print(july_combined_df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "june_combined_df=june_combined_df[['id', 'distance', 'created_at', 'geometry']]\n",
-    "# Select specific columns for July DataFrame\n",
-    "july_combined_df = july_combined_df[['id', 'distance', 'created_at', 'geometry']]\n",
-    "\n",
-    "# Select specific columns for August DataFrame\n",
-    "august_combined_df = august_combined_df[['id', 'distance', 'created_at', 'geometry']]\n",
-    "\n",
-    "# Select specific columns for September DataFrame\n",
-    "september_combined_df = september_combined_df[['id', 'distance', 'created_at', 'geometry']]\n",
-    "\n",
-    "# Select specific columns for October DataFrame\n",
-    "october_combined_df = october_combined_df[['id', 'distance', 'created_at', 'geometry']]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "june_combined_df=june_combined_df.to_crs('EPSG:3067')\n",
-    "july_combined_df=july_combined_df.to_crs('EPSG:3067')\n",
-    "august_combined_df=august_combined_df.to_crs('EPSG:3067')\n",
-    "september_combined_df=september_combined_df.to_crs('EPSG:3067')\n",
-    "october_combined_df=october_combined_df.to_crs('EPSG:3067')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "june_combined_df.to_file('pyha_ridewgps_june.gpkg')\n",
-    "july_combined_df.to_file('pyha_ridewgps_july.gpkg')\n",
-    "august_combined_df.to_file('pyha_ridewgps_august.gpkg')\n",
-    "september_combined_df.to_file('pyha_ridewgps_september.gpkg')\n",
-    "october_combined_df.to_file('pyha_ridewgps_october.gpkg')\n"
    ]
   }
  ],
